manifests/jupyterlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jupyterlab-with-tinyapp
  name: jupyterlab-with-tinyapp
  namespace: tinyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterlab-with-tinyapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyterlab-with-tinyapp
      name: jupyterlab-with-tinyapp
    spec:
      containers:
        - name: jupyter
          image: ghcr.io/tinymultiverse/jupyterlab-tinyapp:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: data-volume
              mountPath: /home/jovyan
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 64Mi
        - name: gateway
          image: ghcr.io/tinymultiverse/tinyapp:latest
          imagePullPolicy: Always
          args: ["gateway"]
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: my-data
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab-with-tinyapp
  namespace: tinyapp
spec:
  selector:
    app.kubernetes.io/name: jupyterlab-with-tinyapp
  ports:
    - port: 80
      targetPort: 8005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-with-tinyapp
  namespace: tinyapp
spec:
  ingressClassName: haproxy
  rules:
    - host: tinymultiverse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyterlab-with-tinyapp
                port:
                  number: 80
